# zama-challenge

./: README.md  docker-compose.yaml  zama-build.sh  zama-download.sh  zama-upload.sh
zama-client/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile
zama-client/src/: api.rs  cli.rs  config.rs  main.rs  utils.rs
zama-client/src/merkle/: merkle_node.rs  merkle_tree.rs  mod.rs
zama-server/: .dockerignore  Dockerfile  go.mod  main.go
zama-server/pkg/config/: config.go
zama-server/pkg/controller/: file.controller.go  utils.go
zama-server/pkg/merkle/: merkle.go
zama-server/pkg/routes/: file.router.go
zama-server/pkg/utils/: utils.go
