[package]
name = "zama-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.6" }
reqwest = { version = "0.11.23", features = ["multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
hex = "0.4"
structopt = "0.3"

[dev-dependencies]
cargo-tree = "0.29"
